cmake_minimum_required (VERSION 3.8)

project(Lab9.Lighting)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT WIN32)
    message( FATAL_ERROR "该项目只能在Windows环境下配置和运行")
endif()


if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/HLSL)
	file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/HLSL DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
endif()

if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Texture)
	file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Texture DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
endif()

if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Model)
	file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Model DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
endif()

if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Models)
	file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Models DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
endif()


file(GLOB_RECURSE SHADERS "*.hlsl")
file(COPY ${SHADERS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

file(GLOB_RECURSE SHADERS "${CMAKE_CURRENT_BINARY_DIR}/*.hlsl")
message("FOUND SHADERS ${SHADERS}")
source_group(TREE ${CMAKE_CURRENT_BINARY_DIR} FILES ${SHADERS})
set_source_files_properties(${SHADERS} PROPERTIES VS_TOOL_OVERRIDE "None")

file(GLOB_RECURSE HEADERS "*.h" "*.hpp")
aux_source_directory(. SOURCE)

add_executable(Lighting WIN32 ${SOURCE} ${HEADERS} ${SHADERS})
